--- a/TestApp_Intermodular/TestApp_Intermodular/LoginWindows.xaml
+++ b/TestApp_Intermodular/TestApp_Intermodular/LoginWindows.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TestApp_Intermodular"
         mc:Ignorable="d"
-        Title="LoginWindows" Height="470" Width="300" ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="CenterScreen">
+        Title="LoginWindows" Height="470" Width="300" ResizeMode="NoResize" WindowStyle="None" WindowStartupLocation="CenterScreen" Background="Transparent">
     <StackPanel>
         <Border 
             MinWidth="300"
