--- a/TestApp_Intermodular/TestApp_Intermodular/RegisterWindow.xaml
+++ b/TestApp_Intermodular/TestApp_Intermodular/RegisterWindow.xaml
@@ -118,7 +118,7 @@
                     <Button Content="Enviar"
                         Width="100"
                         Height="30"
-                        Margin="0,20,0,180"
+                        Margin="0,10,0,0"
                         BorderThickness="1"
                         BorderBrush="Black"
                         Background="#ba5812"
@@ -140,6 +140,17 @@
                         </Button.Template>
                     </Button>
                 </StackPanel>
+
+                <StackPanel>
+                    <TextBlock Text="Volver" 
+                       Foreground="Black"
+                       FontSize="14"
+                       HorizontalAlignment="Center"
+                       TextDecorations="Underline"
+                       MouseLeftButtonDown="BackToLogin"
+                       Margin="0,5,0,0"/>
+                </StackPanel>
+                
             </StackPanel>
         </Border>
     </StackPanel>
