--- a/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/HomeView.xaml
+++ b/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/HomeView.xaml
@@ -6,99 +6,13 @@
              xmlns:local="clr-namespace:TestApp_Intermodular.MVVM.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <StackPanel>
-        <TextBlock Text="Descubre"
-                   Foreground="Black"
-                   FontSize="28"
-                   HorizontalAlignment="Left"
-                   Margin="0,0,0,10"/>
 
-        <StackPanel Orientation="Horizontal">
-            <Border Width="400"
-                    Height="200">
-                <Border.Background>
-                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,2">
-                        <GradientStop Color="#ffc554" Offset="0.0"/>
-                        <GradientStop Color="#12BA58" Offset="1"/>
-                    </LinearGradientBrush>
-                </Border.Background>
-
-                <Border.Clip>
-                    <RectangleGeometry RadiusX="10"
-                                       RadiusY="10"
-                                       Rect="0,0,400,200"/>
-                </Border.Clip>
-
-                <Grid>
-                    <StackPanel>
-                        <TextBlock Text="Aplicación líder&#x0a;de rutas en el mundo"
-                                   Foreground="Black"
-                                   FontSize="28"
-                                   Margin="20,10,10,0"/>
-                        <TextBlock Text="¡Comienza tu aventura!"
-                                   Foreground="Black"
-                                   FontSize="18"
-                                   Margin="20,10,10,0"/>
-                    </StackPanel>
-
-                    <Image
-                           Source="/MVVM/View/compassExplore.png" Margin="249,10,0,-22" HorizontalAlignment="Left" Width="271">
-                        <UIElement.RenderTransform>
-                            <TransformGroup>
-                                <ScaleTransform/>
-                                <SkewTransform/>
-                                <RotateTransform/>
-                                <TranslateTransform/>
-                            </TransformGroup>
-                        </UIElement.RenderTransform>
-                    </Image>
-                </Grid>
-            </Border>
-
-            <Border Width="200"
-                    Height="200"
-                    CornerRadius="10"
-                    Margin="45,0,0,0">
-                <Border.Background>
-                    <LinearGradientBrush StartPoint="0,0" EndPoint="1,2">
-                        <GradientStop Color="#5bc3ff" Offset="0.0"/>
-                        <GradientStop Color="#12BA58" Offset="1"/>
-                    </LinearGradientBrush>
-                </Border.Background>
-            </Border>
+    <StackPanel DataContext="{Binding Data}" Orientation="Horizontal">
+        <StackPanel VerticalAlignment="Center">
+            <TextBlock Text="{Binding Title}" FontWeight="Bold" />
+            <TextBlock Text="{Binding Subtitle}" />
+            <TextBlock Text="{Binding Number}" />
         </StackPanel>
-
-        <StackPanel>
-            <StackPanel.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="Margin" Value="15,0,0,0"/>
-                </Style>
-            </StackPanel.Resources>
-            <TextBlock Text="Rutas populares"
-                   Foreground="Black"
-                   FontSize="20"
-                   HorizontalAlignment="Left"
-                   Margin="0,0,0,10"/>
-            <StackPanel Orientation="Horizontal">
-                <Border Width="150"
-                        Height="150"
-                        Background="#93c47d"
-                        CornerRadius="10"
-                        Margin="0"/>
-                <Border Width="150"
-                        Height="150"
-                        Background="#e69138"
-                        CornerRadius="10"/>
-                <Border Width="150"
-                        Height="150"
-                        Background="#6fa8dc"
-                        CornerRadius="10"/>
-                <Border Width="150"
-                        Height="150"
-                        Background="#ffd966"
-                        CornerRadius="10"/>
-            </StackPanel>
-        </StackPanel>
-
+        <Image Source="{Binding ImageSource}" />
     </StackPanel>
 </UserControl>
