--- a/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/HomeView.xaml
+++ b/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/HomeView.xaml
@@ -7,12 +7,18 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <StackPanel DataContext="{Binding Data}" Orientation="Horizontal">
-        <StackPanel VerticalAlignment="Center">
-            <TextBlock Text="{Binding Title}" FontWeight="Bold" />
-            <TextBlock Text="{Binding Subtitle}" />
-            <TextBlock Text="{Binding Number}" />
+    <Grid DataContext="{Binding Data}" >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="0" Orientation="Vertical" VerticalAlignment="Bottom">
+            <TextBlock Text="Alo{Binding Title}" FontWeight="Bold" Foreground="White" />
+            <TextBlock Text="subAlo{Binding Subtitle}" Foreground="White"/>
         </StackPanel>
-        <Image Source="{Binding ImageSource}" />
-    </StackPanel>
+        <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Bottom" HorizontalAlignment="Right">
+            <TextBlock Text="Numalo{Binding Number}" Foreground="White"/>
+        </StackPanel>
+    </Grid>
+
 </UserControl>
