--- a/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/HomeView.xaml
+++ b/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/HomeView.xaml
@@ -7,17 +7,17 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
-    <Grid DataContext="{Binding Data}" >
+    <Grid Height="300" Width="300" DataContext="{Binding Data}" Background="Transparent" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Column="0" Orientation="Vertical" VerticalAlignment="Bottom">
-            <TextBlock Text="Alo{Binding Title}" FontWeight="Bold" Foreground="White" />
-            <TextBlock Text="subAlo{Binding Subtitle}" Foreground="White"/>
+            <TextBlock Text="Alo{Binding Title}" FontWeight="Bold" Foreground="White" FontSize="24" TextTrimming="CharacterEllipsis" Width="250"/>
+            <TextBlock Text="subAlo{Binding Subtitle}novetuquegeniataesoziquillo" Foreground="White" FontSize="16" TextTrimming="CharacterEllipsis" Width="200"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Orientation="Vertical" VerticalAlignment="Bottom" HorizontalAlignment="Right">
-            <TextBlock Text="Numalo{Binding Number}" Foreground="White"/>
+            <TextBlock Text="Numalo{Binding Number}" Foreground="White" FontSize="16"/>
         </StackPanel>
     </Grid>
 
