--- a/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/ProfileView.xaml
+++ b/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/ProfileView.xaml
@@ -11,6 +11,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="150" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
@@ -31,7 +32,7 @@
             <TextBlock 
                        VerticalAlignment="Center"
                        HorizontalAlignment="Left"
-                       Text="Contraseña" 
+                       Text="Contraseña actual" 
                        FontSize="16" 
                        Foreground="Black" 
                        TextWrapping="Wrap"
@@ -60,28 +61,32 @@
                      VerticalAlignment="Center" 
                      HorizontalAlignment="Left"
                      MinWidth="200"
-                     Margin="5,5,0,0"/>
+                     Margin="5,5,0,0"
+                     IsEnabled="False"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1">
             <TextBox x:Name="PasswordTB"
                      VerticalAlignment="Center" 
                      HorizontalAlignment="Left"
                      MinWidth="200"
-                     Margin="5,35,0,0"/>
+                     Margin="5,35,0,0"
+                     IsEnabled="False"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1">
             <TextBox x:Name="NewPasswordTB"
                      VerticalAlignment="Center" 
                      HorizontalAlignment="Left"
                      MinWidth="200"
-                     Margin="5,65,0,0"/>
+                     Margin="5,65,0,0"
+                     IsEnabled="False"/>
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1">
             <TextBox x:Name="EmailTB"
                      VerticalAlignment="Center" 
                      HorizontalAlignment="Left"
                      MinWidth="200"
-                     Margin="5,95,0,0"/>
+                     Margin="5,95,0,0"
+                     IsEnabled="False"/>
         </StackPanel>
     </Grid>
 </UserControl>
