--- a/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/ProfileView.xaml
+++ b/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/ProfileView.xaml
@@ -6,28 +6,33 @@
              xmlns:local="clr-namespace:TestApp_Intermodular.MVVM.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             Background="Transparent">
+             Background="LightBlue">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150" />
+            <ColumnDefinition Width="190" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.ColumnSpan="2" Grid.Row="0" Text="Información de usuario." FontSize="24"/>
+        <Image x:Name="Image" Width="180" Height="170" Grid.Column="0" Grid.ColumnSpan="1" Grid.Row="1" Margin="3,0,0,35"/>
+        <Button Content="Cambiar Imagen" Click="ImageBtn_Click" Grid.Column="0" Grid.Row="1" MaxWidth="100" Height="25" VerticalAlignment="Bottom"/>
 
-        <StackPanel Grid.Column="0" Grid.Row="1">
+        <TextBlock Grid.ColumnSpan="3" Grid.Row="0" Text="Información de usuario." FontSize="24" HorizontalAlignment="Center"/>
+
+        <StackPanel Grid.Column="0" Grid.Row="2">
             <TextBlock 
                        VerticalAlignment="Center"
                        HorizontalAlignment="Left"
                        Text="Nombre de usuario" 
                        FontSize="16" 
                        Foreground="Black" 
-                       TextWrapping="Wrap"/>
+                       TextWrapping="Wrap"
+                       Margin="3,0,0,0"/>
 
             <TextBlock 
                        VerticalAlignment="Center"
@@ -36,7 +41,7 @@
                        FontSize="16" 
                        Foreground="Black" 
                        TextWrapping="Wrap"
-                       Margin="0,10,0,0"/>
+                       Margin="3,10,0,0"/>
 
             <TextBlock 
                        VerticalAlignment="Center"
@@ -45,18 +50,26 @@
                        FontSize="16" 
                        Foreground="Black" 
                        TextWrapping="Wrap"
-                       Margin="0,10,0,0"/>
+                       Margin="3,10,0,0"/>
             <TextBlock 
                        VerticalAlignment="Center"
                        HorizontalAlignment="Left"
-                       Text="Correo electrónico" 
+                       Text="Correo electrónico actual" 
                        FontSize="16" 
                        Foreground="Black" 
                        TextWrapping="Wrap"
-                       Margin="0,10,0,0"/>
+                       Margin="3,10,0,0"/>
+            <TextBlock 
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Left"
+                       Text="Nuevo correo electrónico" 
+                       FontSize="16" 
+                       Foreground="Black" 
+                       TextWrapping="Wrap"
+                       Margin="3,10,0,0"/>
         </StackPanel>
 
-        <StackPanel Grid.Column="1" Grid.Row="1">
+        <StackPanel Grid.Column="1" Grid.Row="2">
             <TextBox x:Name="UsernameTB" 
                      VerticalAlignment="Center" 
                      HorizontalAlignment="Left"
@@ -64,7 +77,7 @@
                      Margin="5,5,0,0"
                      IsEnabled="False"/>
         </StackPanel>
-        <StackPanel Grid.Column="1" Grid.Row="1">
+        <StackPanel Grid.Column="1" Grid.Row="2">
             <TextBox x:Name="PasswordTB"
                      VerticalAlignment="Center" 
                      HorizontalAlignment="Left"
@@ -72,7 +85,7 @@
                      Margin="5,35,0,0"
                      IsEnabled="False"/>
         </StackPanel>
-        <StackPanel Grid.Column="1" Grid.Row="1">
+        <StackPanel Grid.Column="1" Grid.Row="2">
             <TextBox x:Name="NewPasswordTB"
                      VerticalAlignment="Center" 
                      HorizontalAlignment="Left"
@@ -80,12 +93,20 @@
                      Margin="5,65,0,0"
                      IsEnabled="False"/>
         </StackPanel>
-        <StackPanel Grid.Column="1" Grid.Row="1">
+        <StackPanel Grid.Column="1" Grid.Row="2">
             <TextBox x:Name="EmailTB"
                      VerticalAlignment="Center" 
                      HorizontalAlignment="Left"
                      MinWidth="200"
                      Margin="5,95,0,0"
+                     IsEnabled="False"/>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Grid.Row="2">
+            <TextBox x:Name="NewEmailTB"
+                     VerticalAlignment="Center" 
+                     HorizontalAlignment="Left"
+                     MinWidth="200"
+                     Margin="5,125,0,0"
                      IsEnabled="False"/>
         </StackPanel>
     </Grid>
