--- a/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/ProfileView.xaml
+++ b/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/ProfileView.xaml
@@ -24,12 +24,14 @@
             <Button Content="Cambiar Imagen" Click="ImageBtn_Click"  MaxWidth="100" Height="25" />
             <Button Content="Modificar Perfil" Click="ModifyProfile_Click" MaxWidth="100" Height="25" Margin="5,0,0,0"/>
         </StackPanel>
+        <Button x:Name="SaveButton" Content="Guardar" Click="SaveBtn_Click" MaxWidth="100" Height="25" Margin="5,0,200,5" Grid.Column="2" Grid.Row="2" VerticalAlignment="Bottom" Visibility="Collapsed"/>
 
 
         <TextBlock Grid.ColumnSpan="3" Grid.Row="0" Text="Información de usuario" FontSize="24" HorizontalAlignment="Center"/>
 
         <StackPanel Grid.Column="1" Grid.Row="1">
             <TextBlock Text="Aquí va el nombre de usuario"
+                       Grid.ColumnSpan="3"
                        FontSize="22"/>
             <TextBlock Text="Aquí va el usuario"
                        FontSize="18"/>
