--- a/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/ProfileView.xaml
+++ b/TestApp_Intermodular/TestApp_Intermodular/MVVM/View/ProfileView.xaml
@@ -42,7 +42,8 @@
                        AcceptsReturn="True" 
                        TextWrapping="Wrap"
                        VerticalScrollBarVisibility="Auto"
-                       MaxHeight="170"/>
+                       MaxHeight="170"
+                       IsEnabled="False"/>
 
         </StackPanel>
         <StackPanel Grid.Column="0" Grid.Row="2" Grid.ColumnSpan="2">
